# MTL

./: .gitignore  Cargo.toml  README.md  REPRODUCE.md  mtl-spec.md  mtl_core.rs  rust-toolchain.toml
.github/scripts/: fuzz-smoke.sh
.github/workflows/: ci.yml  perf-smoke.yml  tokreport.yml  verus-export.yml
bench/: .gitignore  BASELINE-SEALED.md  BASELINE-TIER2.md  BASELINE-TIER3.md  BASELINE.md  POSTFIX-NEGINT-INPUT.md  README.md
bench/agent-trial/: README.md  payload.json  report.py  tasks.json  validate_one.py
bench/agent-trial/preamble/: REPORT.md  aggregate.py  pareto.py  run_cell.md  task_prompts.json  variant_tokens.json  winner_manifest.json
bench/agent-trial/readtax/: README.md  answers.json  groundtruth.md  manifest.json  report.py
bench/agent-trial/reference_mtl/: affine.mtl  climbing_stairs.mtl  contains.mtl  factorial.mtl  is_even.mtl  palindrome_number.mtl  reverse_list.mtl  sum_list.mtl
bench/agent-trial/reference_python/: affine.py  climbing_stairs.py  contains.py  factorial.py  gcd.py  is_even.py  palindrome_number.py  rev3.py  reverse_list.py  sum_list.py
bench/agent-trial/results/: REPORT.md  chart.py  metrics.json  results.jsonl
bench/agent-trial/sessions/: REPORT.md  pricing.json  session_econ.py
bench/corpus/affine/: task.md
bench/dataset/: Cargo.toml  README.md  stats.py
bench/dataset/pilot/: contamination_report.json  coverage.json  dataset.jsonl  stats.json  stats_tokens.json
bench/dataset/sealed/: README.md  sealed.manifest.json
bench/dataset/src/: candidates.rs  canon.rs  contamination.rs  coverage.rs  families.rs  lib.rs  oracle.rs  repair.rs  sealed_spec.rs  sft.rs
bench/dataset/tests/: contamination.rs  coverage.rs  oracle_gate.rs  revalidation.rs
bench/design-lora/: README.md  RESULTS.md  requirements.txt  tokcompress.py
bench/design-v0.2/: README.md  measure.py  measurements.md
bench/design-v0.3/: PROJECTED-AGGREGATE.md
bench/design-v0.4/: MEASUREMENTS.md  glyphs.md  glyphs_sweep.py
bench/design-v0.5/: EXPERIMENT.md  MEASUREMENTS.md
bench/design-v0.5/experiment/: Cargo.toml
bench/design-v0.5/experiment/prompts/: task_a_statement.txt  task_b_statement.txt  task_c2_statement.txt  task_c_statement.txt  task_d_statement.txt  task_e2_statement.txt  task_e_statement.txt
bench/design-v0.5/experiment/results/: arm_b.json  arm_b_fixed.json  arm_b_prompts.json
bench/design-v0.5/experiment/results/arm_a/: task_a_trial_1.json  task_a_trial_2.json  task_a_trial_3.json  task_b_trial_1.json  task_b_trial_2.json  task_b_trial_3.json  task_c2_trial_1.json  task_c2_trial_2.json  task_c2_trial_3.json  task_d_trial_1.json  task_d_trial_2.json  task_d_trial_3.json  task_e2_trial_1.json  task_e2_trial_2.json  task_e2_trial_3.json
bench/design-v0.5/experiment/src/: lib.rs
bench/design-v0.6/: corpus-verdicts.md
bench/design-v0.6/capability-spike/: Cargo.toml  README.md
bench/design-v0.6/capability-spike/src/: main.rs
bench/design-v0.8/: BROAD-DISTRIBUTION.md  broad_results.json  broad_shapes.json  measure.py
bench/lora/: README.md  RUNBOOK.md  requirements.txt  serve_adapter.py  train_mtl_lora.py
bench/sealed/: AUTHORSHIP.md  FREEZE.md  GAPS.md  README.md  tasks.json
bench/tier3/: README.md  measure.py  report.py
bench/tokcount/: README.md  __init__.py  drift.py  report.py  report_tier2.py  requirements.txt  tasks.json  tokcount.py  token_profile.json
bench/validate/: Cargo.toml  TIER2_NOTES.md
bench/validate/src/: lib.rs
bench/validate/tests/: corpus.rs  sealed.rs  tier2.rs  tier2_v03.rs
crates/mtl-arena/: Cargo.toml  proof-log.txt
crates/mtl-arena-spike/: Cargo.toml
crates/mtl-arena-spike/examples/: perf_arena.rs
crates/mtl-arena-spike/src/: lib.rs
crates/mtl-arena-spike/tests/: oracle.rs
crates/mtl-arena/proofs/: arena_verus.rs
crates/mtl-arena/src/: arena.rs  compact.rs  convert.rs  host.rs  lib.rs  prim.rs  run.rs  types.rs  vm.rs
crates/mtl-arena/tests/: compaction.rs  fault_parity.rs  generation.rs  host_parity.rs  oracle.rs
crates/mtl-arena/tests/common/: mod.rs
crates/mtl-check/: Cargo.toml
crates/mtl-check/src/: lib.rs  main.rs  tests.rs
crates/mtl-check/tests/: differential.rs  soundness.rs
crates/mtl-conformance/: Cargo.toml
crates/mtl-conformance/src/: lib.rs
crates/mtl-conformance/tests/: arena_conformance.rs  conformance.rs
crates/mtl-core/: Cargo.toml  proof-log.txt
crates/mtl-host/: Cargo.toml
crates/mtl-host-conformance/: Cargo.toml
crates/mtl-host-conformance/src/: hosts.rs  lib.rs
crates/mtl-host-conformance/tests/: boundary.rs  conformance.rs  reference_host.rs
crates/mtl-host/src/: capability.rs  core_bridge.rs  driver.rs  handle.rs  host.rs  lib.rs  meter.rs
crates/mtl-host/src/caps/: mod.rs
crates/mtl-host/tests/: arena_backend.rs  security_posture.rs  tier3.rs
crates/mtl-perf/: Cargo.toml  PERF-BASELINE.md
crates/mtl-perf/benches/: arena_vs_interp.rs  corpus.rs  dispatch.rs  fold.rs  parser.rs  recursion.rs
crates/mtl-perf/examples/: arena_vs_interp.rs  perf_report.rs
crates/mtl-perf/src/: lib.rs
crates/mtl-syntax/: Cargo.toml
docs/: RELEASE-NOTES-0.4.0.md  ci-reliability.md  host-conformance.md  mtl-quickref-min.md  mtl-quickref.md  mtl-spec.md
docs/design/: primitive-mirror-codegen.md  v0.2-recursion-primitives.md  v0.3-sequences.md  v0.4-effects.md  v0.5-oracle-sketch.md  v0.5-refactor.md  v0.6-checker.md  v0.6-indexed-access.md  v0.7-lora-warm-agent.md  v0.8-generalization.md
docs/notes/: related-work.md
docs/paper/: README.md  mtl.md
docs/reviews/: 2026-07-11-adversarial-review.md  2026-07-13-architecture-review-gpt55.md  2026-07-13-p5-review-gpt55.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/differential/: seed1  seed2  seed3  seed4  seed5  seed6  seed7  seed8
fuzz/corpus/parse_exec/: dip_over  fold  nested  primrec  rot_swap
fuzz/corpus/parse_roundtrip/: all_glyphs  cons_cat  dup_apply  if_true  quote_apply  sub_neg  times  uncons
fuzz/fuzz_targets/: differential.rs  parse_exec.rs  parse_roundtrip.rs
fuzz/src/: lib.rs
kit/: EVIDENCE.md  build-verus.sh  proof-gates.sh  replicate.sh
(+1114 files in other folders)
