[package]
name = "mtl-datagen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mtl-syntax = { path = "../../crates/mtl-syntax" }
mtl-core = { path = "../../crates/mtl-core" }
mtl-arena = { path = "../../crates/mtl-arena" }
mtl-host = { path = "../../crates/mtl-host" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
