[package]
name = "mtl-host"
version = "0.4.0"
edition = "2021"
description = "MTL v0.4 host half: the unverified host runner (driver, capabilities, metering, handles) above the pure verified core."

[dependencies]
mtl-core = { path = "../mtl-core" }
mtl-syntax = { path = "../mtl-syntax" }

[dev-dependencies]
# OPT-IN arena backend, used ONLY by `tests/arena_backend.rs` to prove that the
# arena host driver (`mtl_arena::host::arena_drive`) is behaviourally identical to
# the default `mtl_core::host::drive` when driven through this crate's REAL
# `HostShim`. It is NOT a production dependency: the default `driver::drive` path
# is untouched, so selecting the arena backend is an explicit caller choice.
mtl-arena = { path = "../mtl-arena" }
