[package]
name = "mtl-host"
version = "0.4.0"
edition = "2021"
description = "MTL v0.4 host half: the unverified host runner (driver, capabilities, metering, handles) above the pure verified core."

[dependencies]
mtl-core = { path = "../mtl-core" }
mtl-syntax = { path = "../mtl-syntax" }
# The arena backend is now the DEFAULT execution engine (`driver::drive` routes to
# `mtl_arena::host::arena_drive`); the reference interpreter (`mtl_core::host::drive`)
# stays reachable as the differential anchor via `driver::drive_interp` /
# `drive_with(Engine::Interp, ...)`. The refinement obligation is discharged
# (machine-checked Verus), so this is a proved default, not a silent substitute.
mtl-arena = { path = "../mtl-arena" }
